--- a/public/assets/css/search_result.css
+++ b/public/assets/css/search_result.css
@@ -133,3 +133,33 @@
 .result-item .item-info .info-top a:link{color:#333; }
 .result-item .item-info .info-top a:visited{ color: #999;}
 .result-item .item-info .info-top a:hover{color:#c13232; }
+
+/*案例聚合页*/
+.cases-filter-tags {
+    float: left;
+}
+.cases-search-bar {
+    float: right;
+    height: 30px;
+}
+.cases-search-bar .search-text {
+    width: 225px;
+    height: 28px;
+    border: 1px solid #dcdcdc;
+    border-right: none;
+    float: left;
+    padding-left: 10px;
+}
+.cases-search-bar .search-btn {
+    width: 44px;
+    height: 30px;
+    background-color: #c13232;
+    
+    float: left;
+    text-align: center;
+    line-height: 30px;
+}
+.cases-search-bar .search-btn .iconfont {
+    color: #fff;
+    font-size: 16px;
+}
