--- a/public/assets/css/article_detail.css
+++ b/public/assets/css/article_detail.css
@@ -141,7 +141,7 @@
 }
 .content-guide-box {
   width: 100%;
-  padding: 30px 0;
+  padding: 30px 0 38px;
   text-align: center;
   position: relative;
   z-index: 10;
@@ -395,4 +395,23 @@
 .community-tel{
   display: block;
   font-size:14px;
+}
+
+.fans-block {
+  padding: 0 0 30px 6px;
+  line-height: 34px;
+}
+.fans-block img {
+  float: left;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  border: 2px solid #fff;
+}
+.fans-block .fans-info {
+  float: left;
+  height: 34px;
+  line-height: 34px;
+  font-size: 14px;
+  color: #333;
 }
