--- a/views/widget/corporate_events/new_corporate_events.html
+++ b/views/widget/corporate_events/new_corporate_events.html
@@ -291,23 +291,41 @@
     }
     $(".year-box").eq(0).css("padding-top","20px");
     $(document).scrollTop(0);
-    // $(".down").on("click",function(){
-    //   console.log('aaaaaa111111')
-    //   // $(this).html("&#xe635;");
-    //   // $(this).css({"color":"#c13232","cursor":"default"});
-    //   $(this) .parents(".curyear").children(".month-box").css("display","block");
-    //   $(document).scrollTop(500);
-    //   $(this).parents(".curyear").children(".kong").css("display","block");
-    //   $(this) .parents(".curyear").siblings().children(".month-box").css("display","none");
-    //   $(this).parents(".curyear").siblings().children(".kong").css("display","none");
-    //   // $(this).parents(".curyear").siblings().children(".year-box").find(".down").html("&#xe636;");
-    //   // $(this).parents(".curyear").siblings().children(".year-box").find(".down").css({"color":"#999999","cursor":"pointer"});
-    //   $.each($(this).parents(".curyear").siblings(".curyear"),function(){
-    //     $(this).find(".kong").eq(0).css("display","block");
-    //   });
-    //   $(".curyear:last").find(".kong").eq(0).css("display","none");
-    //   $(".curyear:last").find(".kong:last").css("display","none");
-    // })
+    $(".down").on("click",function(){
+      console.log('aaaaaa111111')
+      if ($(this).parents(".curyear").children(".month-box").css('display') == 'block') {
+        console.log('aaaablock')
+        $(this).parents(".curyear").children(".month-box").css("display","none");
+        // $.each($(this).parents(".curyear").siblings(".curyear"),function(){
+        // $(this).find(".kong:last").eq(0).css("display","none");
+        // });
+        $(this).parents(".curyear").children(".kong").css("display","none");
+        $(this).parents(".curyear:last").children(".kong").eq(0).css("display","block");
+        // $(this).parents(".curyear:last").children(".kong:last").css("display","block");
+      } else {
+        console.log('bbbbnone')
+        $(this).parents(".curyear").children(".month-box").css("display","block");
+        $.each($(this).parents(".curyear").siblings(".curyear"),function(){
+          $(this).find(".kong").eq(0).css("display","block");
+        });
+        $(this).parents(".curyear:last").children(".kong").eq(0).css("display","none");
+        $(this).parents(".curyear:last").children(".kong:last").css("display","none");
+      }
+      // $(this).html("&#xe635;");
+      // $(this).css({"color":"#c13232","cursor":"default"});
+      // $(this).parents(".curyear").children(".month-box").css("display","block");
+      // $(document).scrollTop(500);
+      // $(this).parents(".curyear").children(".kong").css("display","block");
+      // $(this) .parents(".curyear").siblings().children(".month-box").css("display","none");
+      // $(this).parents(".curyear").siblings().children(".kong").css("display","none");
+      // $(this).parents(".curyear").siblings().children(".year-box").find(".down").html("&#xe636;");
+      // $(this).parents(".curyear").siblings().children(".year-box").find(".down").css({"color":"#999999","cursor":"pointer"});
+      // $.each($(this).parents(".curyear").siblings(".curyear"),function(){
+      //   $(this).find(".kong").eq(0).css("display","block");
+      // });
+      $(".curyear:last").find(".kong").eq(0).css("display","none");
+      $(".curyear:last").find(".kong:last").css("display","none");
+    })
     var page = 1
     $('#eve_more').on("click",function () {
       $.ajax({
@@ -340,7 +358,7 @@
     for (var key in msg) {
       s++;
       html += '<li>';
-      html += '<a href="javascript:void(0);" onclick="showyear('+key.substring(0,4)+')"><div class="eve-box clearfix"><i class="down xiangxia" style="cursor: pointer;"></i><h6 class="year-num" style="cursor: pointer;">'+key.substring(0,4)+'</h6></div></a>';
+      html += '<a href="javascript:void(0);" onclick="showyear('+key.substring(0,4)+')"><div class="eve-box clearfix"><i class="down xiangxia" style="cursor: pointer;"></i><h6 class="year-num" style="cursor: pointer;font-weight: normal;">'+key.substring(0,4)+'</h6></div></a>';
       console.log('s',s);
       console.log('msg',msg.length);
       if (s != a.length) {
@@ -443,24 +461,43 @@
       }
     }
     $('#evemain').append($(html));
-    // $(".down").on("click",function(){
-    //   console.log('aaaaaa111111')
-    //   // $(this).html("&#xe635;");
-    //   // $(this).css({"color":"#c13232","cursor":"default"});
-    //   $(this) .parents(".curyear").children(".month-box").css("display","block");
-    //   $(document).scrollTop(500);
-    //   $(this).parents(".curyear").children(".kong").css("display","block");
-    //   $(this).parents(".curyear").siblings().children(".month-box").css("display","none");
-    //   $(this).parents(".curyear").siblings().children(".kong").css("display","none");
-    //   $(this).parents(".curyear").siblings("#tian").css("display","none");
-    //   // $(this).parents(".curyear").siblings().children(".year-box").find(".down").html("&#xe636;");
-    //   // $(this).parents(".curyear").siblings().children(".year-box").find(".down").css({"color":"#999999","cursor":"pointer"});
-    //   $.each($(this).parents(".curyear").siblings(".curyear"),function(){
-    //     $(this).find(".kong").eq(0).css("display","block");
-    //   });
-    //   $(".curyear:last").find(".kong").eq(0).css("display","none");
-    //   $(".curyear:last").find(".kong:last").css("display","none");
-    // })
+    $('.down').unbind('click');
+    $(".down").on("click",function(){
+      console.log('aaaaaa111111')
+      $(this).parents(".curyear").siblings("#tian").css("display","none");
+      if ($(this).parents(".curyear").children(".month-box").css('display') == 'block') {
+        console.log('aaaablock')
+        $(this).parents(".curyear").children(".month-box").css("display","none");
+        // $.each($(this).parents(".curyear").siblings(".curyear"),function(){
+        // $(this).find(".kong:last").eq(0).css("display","none");
+        // });
+        $(this).parents(".curyear").children(".kong").css("display","none");
+        $(this).parents(".curyear:last").children(".kong").eq(0).css("display","block");
+        // $(this).parents(".curyear:last").children(".kong:last").css("display","block");
+      } else {
+        console.log('bbbbnone')
+        $(this).parents(".curyear").children(".month-box").css("display","block");
+        $.each($(this).parents(".curyear").siblings(".curyear"),function(){
+          $(this).find(".kong").eq(0).css("display","block");
+        });
+        $(this).parents(".curyear:last").children(".kong").eq(0).css("display","none");
+        $(this).parents(".curyear:last").children(".kong:last").css("display","none");
+      }
+      // // $(this).html("&#xe635;");
+      // // $(this).css({"color":"#c13232","cursor":"default"});
+      // $(this).parents(".curyear").children(".month-box").css("display","block");
+      // // $(document).scrollTop(500);
+      // $(this).parents(".curyear").children(".kong").css("display","block");
+      // // $(this).parents(".curyear").siblings().children(".month-box").css("display","none");
+      // // $(this).parents(".curyear").siblings().children(".kong").css("display","none");
+      // // $(this).parents(".curyear").siblings().children(".year-box").find(".down").html("&#xe636;");
+      // // $(this).parents(".curyear").siblings().children(".year-box").find(".down").css({"color":"#999999","cursor":"pointer"});
+      // $.each($(this).parents(".curyear").siblings(".curyear"),function(){
+      //   $(this).find(".kong").eq(0).css("display","block");
+      // });
+      $(".curyear:last").find(".kong").eq(0).css("display","none");
+      $(".curyear:last").find(".kong:last").css("display","none");
+    })
     console.log('yeareve', $('#zuihou').attr('data-year'))
     if ($('#zuihou').attr('data-year') == 1999) {
       console.log('aaaaaaa');
