文章底页点赞数

--- a/public/assets/css/article_detail.css
+++ b/public/assets/css/article_detail.css
@@ -389,8 +389,10 @@
 }
 
 .fans-block {
-  padding: 0 0 30px 6px;
   line-height: 34px;
+}
+.avatar-block {
+  padding: 0 0 30px 6px;
 }
 .fans-block img {
   float: left;
