文章底页点赞数

--- a/views/article_detail.html
+++ b/views/article_detail.html
@@ -85,10 +85,7 @@
             <div class="detail-guide-text" onclick="open_main('{{userinfo.uid}}')">去主页浏览TA的更多精彩内容<img src="{{helper.cdnhost}}/assets/img/diye_icon_arrow@2x.png" alt=""><img src="{{helper.cdnhost}}/assets/img/diye_icon_arrow@2x.png" alt="" class="small-dis"></div>
           </div>
           <!-- 点赞用户头像合集 -->
-          <div class="fans-block clearfix">
-            <div class="avatar-block" id="avatar-block">
-            </div>
-            <!-- <div class="fans-info">等121人点赞</div> -->
+          <div class="fans-block clearfix" id='fans-block'>
           </div>
           <div class="userinfo-box clearfix" >
             {% if userinfo.qrcode %}
