修改大事记轮播

--- a/views/about/new_about.html
+++ b/views/about/new_about.html
@@ -5,6 +5,7 @@
 <link rel="stylesheet" type="text/css" href="{{helper.cdnhost}}/assets/css/about.css">
 <style>
     .about-guanggao img{
+        width: 100%;
         margin: 0 auto;
         height: 450px;
     }
