--- a/views/about/contact.html
+++ b/views/about/contact.html
@@ -92,6 +92,10 @@ width:50px;}
     background-color: #DCDCDC;
     margin-left: 20px;
   }
+  .branch-lunbo-slider .slider-img-ul, .branch-lunbo-slider .slider-img-ul li{
+    width: 100%;
+    height: 450px;
+  }
 </style>
 </head>
 <body style="background: #f5f5f5;">
