--- a/views/about/new_events.html
+++ b/views/about/new_events.html
@@ -8,7 +8,8 @@
 <link rel="stylesheet" href="{{helper.cdnhost}}/assets/css/widget/corporate_events.css">
 -->
 <style type="text/css">
-  .events-guanggao img{
+  .branch-lunbo-slider .slider-img-ul, .branch-lunbo-slider .slider-img-ul li{
+    width: 100%;
     height: 450px;
   }
 </style>
@@ -23,8 +24,10 @@
 {#<div style="margin:20px 0">
   {% include "widget/nav_tenth/nav_tenth.html" %}
 </div>#}
-<div class=" clearfix" style="margin: 0px auto;">
-  <div class="events-guanggao" style="width: 100%;height: 450px;background: #dedede;overflow: hidden" id="XC_EVENTS_SEAT1"></div>
+<div class="clearfix">
+  <div class="branch-lunbo-slider" style="width:100%;height: 450px;" >
+    {% include "widget/xSlider/xSlider.html" %}
+  </div>
 </div>
 <div class="clearfix" style="position: relative;top: -50px;">
   {% include "widget/nav_tenth/new_tenth.html" %}
