修改大事记时间轴

--- a/views/widget/corporate_events/new_corporate_events.html
+++ b/views/widget/corporate_events/new_corporate_events.html
@@ -373,7 +373,7 @@
     for (var key in msg) {
       s++;
       if (s == 1) {
-        html += '<div id="year_'+key.substring(0,4)+'" style="display: none;">'
+        html += '<div id="'+key.substring(0,4)+'_year" style="display: none;">'
       }
       html += '<li>';
       html += '<a href="javascript:void(0);" onclick="showyear('+key.substring(0,4)+')"><div class="eve-box clearfix"><h6 class="year-num" style="cursor: pointer;font-weight: normal;">'+key.substring(0,4)+'</h6></div></a>';
