--- a/views/widget/new_slide/events_slide.html
+++ b/views/widget/new_slide/events_slide.html
@@ -54,7 +54,7 @@
     border-left: 1px solid #c13232;
   }
 </style>
-<div class="mui-mbar-tabs eve-mbar-tabs" style="z-index:999;">
+<div class="mui-mbar-tabs eve-mbar-tabs" style="z-index:999;display: none;">
   <div class="eve_links_dockright"  style="top: 200px;">
     <div class="quick_link_mian">
 
