--- a/views/widget/corporate_events/new_corporate_events.html
+++ b/views/widget/corporate_events/new_corporate_events.html
@@ -56,7 +56,7 @@
     width: 32px;
     height: 32px;
     background: url({{helper.cdnhost}}/assets/img/events/jie.png) no-repeat;
-    left: -55px;
+    left: -85px;
     top: 30px;
   }
   .month-box .dian1{
@@ -65,11 +65,11 @@
     height: 54px;
     background: url({{helper.cdnhost}}/assets/img/events/jie_zhong.png) no-repeat;
     position: absolute;
-    left: -66px;
+    left: -95px;
     top: 18px;
   }
   .dashiji-con{
-    width: 880px;
+    width: 810px;
     padding: 30px 40px;
     font-size: 20px;
     color: #333;
@@ -77,6 +77,7 @@
     border-radius: 8px;
     position: relative;
     line-height: 25px;
+    left: 30px;
   }
   .dashiji-con .kuang_jiao{
     display: inline-block;
@@ -88,7 +89,7 @@
     top: 32px;
   }
   .dashiji-con1{
-    width: 880px;
+    width: 810px;
     padding: 30px 40px;
     font-size: 20px;
     color: #333;
@@ -96,6 +97,7 @@
     border-radius: 8px;
     position: relative;
     line-height: 25px;
+    left: 30px;
   }
   .dashiji-con1 .kuang_jiao1{
     display: inline-block;
@@ -203,14 +205,14 @@
       {% if item.thumb3 == '' or item.thumb3 == null %}
       {% if item.thumb == '' or item.thumb == null %}
       {# 无图 #}
-      <div class="dashiji-con" style="display: block;margin: 20px 0px 60px 36px;">
+      <div class="dashiji-con" style="display: block;margin: 20px 35px 60px 36px;">
         <i class="dian"></i>
         <i class="kuang_jiao"></i>
        {{ loop.index }}. {{ item.description }}
       </div>
       {% else %}
       {# 只一条 #}
-      <div class="dashiji-con1 clearfix" style="display: block;margin: 20px 0px 60px 36px;">
+      <div class="dashiji-con1 clearfix" style="display: block;margin: 20px 35px 60px 36px;">
           <i class="dian1"></i>
           <i class="kuang_jiao1"></i>
          {{ loop.index }}. {{ item.description }}
@@ -221,25 +223,25 @@
         {% endif %}
       {% else %}
       {% if loop.index==loop.length %}
-      <div class="dashiji-con" style="display: block;margin: 20px 0px 60px 36px;">
+      <div class="dashiji-con" style="display: block;margin: 20px 35px 60px 36px;">
         <i class="dian"></i>
         <i class="kuang_jiao"></i>
        {{ loop.index }}. {{ item.description }}
        <div class="shiji-pic3 clearfix">
             <img src="{{ helper.imageThumb(item.thumb,'280x210') }}" alt="">
             <img src="{{ helper.imageThumb(item.thumb2,'280x210') }}" alt="">
-            <img src="{{ helper.imageThumb(item.thumb3,'280x210') }}" alt="">
+            <img src="{{ helper.imageThumb(item.thumb3,'280x210') }}" alt=""  style="margin-right: 0px;">
           </div>
       </div>
       {% else %}
-      <div class="dashiji-con" style="display: block;margin: 20px 0px 0px 36px;">
+      <div class="dashiji-con" style="display: block;margin: 20px 35px 0px 36px;">
         <i class="dian"></i>
         <i class="kuang_jiao"></i>
         {{ loop.index }}. {{ item.description }}
         <div class="shiji-pic3 clearfix">
           <img src="{{ helper.imageThumb(item.thumb,'280x210') }}" alt="">
           <img src="{{ helper.imageThumb(item.thumb2,'280x210') }}" alt="">
-          <img src="{{ helper.imageThumb(item.thumb3,'280x210') }}" alt="">
+          <img src="{{ helper.imageThumb(item.thumb3,'280x210') }}" alt="" style="margin-right: 0px;">
             </div>
       </div>
       {% endif %}
@@ -434,12 +436,12 @@
           if (msg[key][key1][key11].thumb3 == '' || msg[key][key1][key11].thumb3 == null) {
             if (msg[key][key1][key11].thumb == '' || msg[key][key1][key11].thumb == null) {
               //{# 无图 #}
-              html += '<div class="dashiji-con" style="display: block;margin: 20px 0px 60px 36px;">'
+              html += '<div class="dashiji-con" style="display: block;margin: 20px 35px 60px 36px;">'
               html += '<i class="dian"></i>'
               html += '<i class="kuang_jiao"></i>'+ (key11+1) +'. '+ msg[key][key1][key11].description +'</div>'
             } else {
               //{# 只一条 #}
-              html += '<div class="dashiji-con1 clearfix" style="display: block;margin: 20px 0px 60px 36px;">'
+              html += '<div class="dashiji-con1 clearfix" style="display: block;margin: 20px 35px 60px 36px;">'
               html += '<i class="dian1"></i>'
               html += '<i class="kuang_jiao1"></i>'+ (key11+1) +'. '+ msg[key][key1][key11].description +'<div class="shiji-pic clearfix">'
               html += '<img src="'+fn.imageThumb(msg[key][key1][key11].thumb)+'" alt="">'
@@ -448,23 +450,23 @@
             }
           } else {
             if (key11 == msg[key][key1].length) {
-              html += '<div class="dashiji-con" style="display: block;margin: 20px 0px 60px 36px;">'
+              html += '<div class="dashiji-con" style="display: block;margin: 20px 35px 60px 36px;">'
               html += '<i class="dian"></i>'
               html += '<i class="kuang_jiao"></i>'+ (key11+1) +'. '+ msg[key][key1][key11].description
               html += '<div class="shiji-pic3 clearfix">'
               html += '<img src="'+fn.imageThumb(msg[key][key1][key11].thumb,'280x210')+'" alt="">'
               html += '<img src="'+fn.imageThumb(msg[key][key1][key11].thumb2,'280x210')+'" alt="">'
-              html += '<img src="'+fn.imageThumb(msg[key][key1][key11].thumb3,'280x210')+'" alt="">'
+              html += '<img src="'+fn.imageThumb(msg[key][key1][key11].thumb3,'280x210')+'" alt="" style="margin-right: 0px;">'
               html += '</div>'
               html += '</div>'
             } else {
-              html += '<div class="dashiji-con" style="display: block;margin: 20px 0px 0px 36px;">'
+              html += '<div class="dashiji-con" style="display: block;margin: 20px 35px 0px 36px;">'
               html += '<i class="dian"></i>'
               html += '<i class="kuang_jiao"></i>'+ (key11+1) +'. '+ msg[key][key1][key11].description
               html += '<div class="shiji-pic3 clearfix">'
               html += '<img src="'+fn.imageThumb(msg[key][key1][key11].thumb,'280x210')+'" alt="">'
               html += '<img src="'+fn.imageThumb(msg[key][key1][key11].thumb2,'280x210')+'" alt="">'
-              html += '<img src="'+fn.imageThumb(msg[key][key1][key11].thumb3,'280x210')+'" alt="">'
+              html += '<img src="'+fn.imageThumb(msg[key][key1][key11].thumb3,'280x210')+'" alt="" style="margin-right: 0px;">'
               html += '</div>'
               html += '</div>'
             }
