--- a/views/chief.html
+++ b/views/chief.html
@@ -387,6 +387,7 @@ function chiefmore () {
         }
         mainhtml += '</div>';
         $('#main_con').append($(mainhtml));
+        $(".advisor-code").unbind('click');
         $(".advisor-code").on('click',function(){
           if($(this).next().css("display")=="block"){
             $(this).next().css("display","none");
