--- a/views/chief.html
+++ b/views/chief.html
@@ -210,6 +210,7 @@
 
 {% include "widget/new_footer/common_footer.html" %}
 <!-- =====活动弹窗===== -->
+{% include "widget2/active_popup/active_popup.html" %}
 <script src="{{helper.cdnhost}}/assets/js/nav_liuxue_search.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/show_advert.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/bottom_comment_zhuanlan_zhuye.js"></script>
