修改首席顾问底部悬浮

--- a/views/about/lawyer.html
+++ b/views/about/lawyer.html
@@ -122,7 +122,8 @@
     </a>
   </div>
 </div>
-
+<!-- =====活动弹窗===== -->
+{% include "widget2/active_popup/active_popup.html" %}
 {% include "widget/new_footer/yimin_footer.html" %}
 {% import "widget/new_slide_yimin/new_slide.html" as  slide %}
 {{slide.leyu_slide(helper) }}
