--- a/views/widget/new_nav_first/error_nav.html
+++ b/views/widget/new_nav_first/error_nav.html
@@ -7,8 +7,8 @@
         <ul class="page-type">
             <!-- <li class="type-nav small-nav {{'active' if tdk.pagekey == 'HOME'}}"><a href="{{ helper.urlgen('branch_home','c='+tdk.cityid) }}">留学</a></li> -->
             <li class="type-nav middle-nav {{'active' if tdk.pagekey == 'ARTICLELIST'}}"><a href="{{helper.urlgen('articles')}}">留学攻略</a></li>
-            <!-- <li class="type-nav middle-nav {{'active' if tdk.pagekey == 'CHIEF'}}"><a href="{{helper.urlgen('chief')}}">首席顾问</a></li>
-            <li class="type-nav middle-nav {{'active' if tdk.pagekey == 'ADVISER'}}"><a href="{{helper.urlgen('adviser')}}">留学顾问</a></li> -->
+            <li class="type-nav middle-nav {{'active' if tdk.pagekey == 'CHIEF'}}"><a href="{{helper.urlgen('chief')}}">首席顾问</a></li>
+            <li class="type-nav middle-nav {{'active' if tdk.pagekey == 'ADVISER'}}"><a href="{{helper.urlgen('adviser')}}">留学顾问</a></li>
             <li class="type-nav middle-nav"><a href="{{helper.urlgen('case')}}">留学案例</a></li>
             <li class="type-nav big-nav {{'active' if tdk.pagekey == 'PROFILE'}}"><a href="{{ helper.urlgen('about') }}">关于金吉列</a></li>
         </ul>
