--- a/views/widget/new_nav_first/new_nav_first.css
+++ b/views/widget/new_nav_first/new_nav_first.css
@@ -25,7 +25,7 @@ form, input {
 .new_nav_first .new-logo-left{
     height: 62px;
     float: left;
-    margin-right: 40px;
+    margin-right: 20px;
 }
 .new_nav_first_red .new_nav_first .new-logo-left {
     margin-right: 30px;
@@ -36,7 +36,7 @@ form, input {
     margin-top: 10px;
 }
 .new_nav_first .page-type{
-    width: 542px;
+    width: 590px;/*542px;*/
     margin-top: 26px;
     float: left;
 }
@@ -50,15 +50,16 @@ form, input {
     line-height: 28px;
     background-color: transparent;
     border: 1px solid transparent;
+    padding: 0 20px;
 }
 .new_nav_first .page-type .type-nav.small-nav {
-    width: 74px;
+    /* width: 74px; */
 }
 .new_nav_first .page-type .type-nav.middle-nav {
-    width: 110px;
+    /* width: 110px; */
 }
 .new_nav_first .page-type .type-nav.big-nav {
-    width: 128px;
+    /* width: 128px; */
     margin-right: 0;
 }
 .new_nav_first .page-type li.active{
@@ -84,14 +85,14 @@ form, input {
     color: #fff;
 }
 .new_nav_first_white.yimin_nav .page-type,.new_nav_first_red.yimin_nav .page-type {
-    width: 206px;
+    width: 210px;
 }
 .new_nav_first .page-type{
     float: left;
 }
 .new_nav_first .nav-right{
     float: right;
-    width: 438px;
+    width: 382px;/*438px;*/
 }
 .new_nav_first .new-city{
     float:left;
@@ -292,14 +293,14 @@ form, input {
 }
 /*搜索*/
 .new_nav_first .nav-right .new-searchs{
-    width: 303px;
+    width: 280px;/*303px;*/
     height: 30px;
     position: relative;
     z-index: 2; /*热门搜索签儿盖住轮播图*/
     margin-top: 26px;
     background-color: #fff;
     float: right;
-    margin-left: 30px;
+    margin-left: 20px;
 }
 .new_nav_first .nav-right .search-type-box{
     width: 49px;
@@ -360,7 +361,7 @@ form, input {
     outline-style: none;
 }
 .new_nav_first .new-home-search .text-nav{
-    width: 200px;
+    width: 177px;/*200px;*/
     height: 28px;
     line-height: 28px;
     border:1px solid #dcdcdc;
