--- a/views/widget/new_slide/events_slide.html
+++ b/views/widget/new_slide/events_slide.html
@@ -43,6 +43,14 @@
     margin-left: -30px;
     margin-top: -3px;
   }
+  .eve-box .down1{
+    width: 32px;
+    height: 32px;
+    display: inline-block;
+    background: url({{helper.cdnhost}}/assets/img/events/jie.png) no-repeat;
+    margin-left: -35px;
+    margin-top: -7px;
+  }
   .year-num{
     font-size: 18px;
     color: #999;
@@ -62,12 +70,12 @@
         <ul id="eve_slide">
             {% for yearnum, yearamount in memorabilia_list %}
             {% if loop.index == 1 %}
-            <li onclick="showd('{{ yearnum | shorten(-1)}}')">
+            <li id="{{ yearnum | shorten(-1)}}_down" onclick="showd('{{ yearnum | shorten(-1)}}')">
             <div class="eve-box clearfix" style="cursor: pointer;width: 140px;">
-            <i class="down xiangxia" id="{{ yearnum | shorten(-1)}}" style="cursor: pointer;"></i><span class="year-num" style="font-size: 22px;">{{ yearnum | shorten(-1)}}</span>
+            <i class="down down1 xiangxia" style="cursor: pointer;"></i><span class="year-num" style="font-size: 22px;color: #999;">{{ yearnum | shorten(-1)}}</span>
             {% else %}
             {% if loop.index == loop.length %}
-            <span class="year-num" style="font-size: 22px;"> -- {{ yearnum | shorten(-1)}}</span>
+            <span class="year-num" style="font-size: 22px;color: #999;"> -- {{ yearnum | shorten(-1)}}</span>
             </div>
             </li>
             {% endif %}
@@ -95,6 +103,10 @@
     console.log(year+'showd')
     $("div[id$='_year']").css('display', 'none')
     $('#'+ year+ '_year').css('display', 'block')
+    $("li[id$='_down']").find("div").find("i").removeClass('down1')
+    $("li[id$='_down']").find("span").css('color', '#999999')
+    $('#' + year + '_down').find("div").find("i").addClass('down1')
+    $('#' + year + '_down').find("span").css('color', '#c13232')
   }
   function showyear (year) {
     console.log('key',year)
