修改大事记时间轴

--- a/views/widget/corporate_events/new_corporate_events.html
+++ b/views/widget/corporate_events/new_corporate_events.html
@@ -363,10 +363,10 @@
       if (i == 1) {
         html += '<li id="'+key.substring(0,4)+'_down" style="margin-top: 30px;" onclick="showd('+key.substring(0,4)+')">'
         html += '<div class="eve-box clearfix" style="cursor: pointer;width: 140px;">'
-        html += '<i class="down xiangxia" style="cursor: pointer;"></i><span class="year-num" style="font-size: 22px;color: #999;">'+key.substring(0,4)+'</span>'
+        html += '<i class="down xiangxia" style="cursor: pointer;"></i><span class="year-num" style="font-size: 22px;">'+key.substring(0,4)+'</span>'
       } else {
         if ( i == a.length ) {
-          html += '<span class="year-num" style="font-size: 22px;color: #999;"> -- '+key.substring(0,4)+'</span>'
+          html += '<span class="year-num" style="font-size: 22px;"> -- '+key.substring(0,4)+'</span>'
         }
       }
     }
