--- a/views/widget/new_slide/events_slide.html
+++ b/views/widget/new_slide/events_slide.html
@@ -22,6 +22,9 @@
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
   }
+  .eve_links_panel ul li .redtitle{
+    color: #c13232;
+  }
   .eve_links_panel ul li:hover h6, .eve_links_panel ul li:hover span{
     color: #c13232;
 
@@ -71,11 +74,11 @@
             {% for yearnum, yearamount in memorabilia_list %}
             {% if loop.index == 1 %}
             <li id="{{ yearnum | shorten(-1)}}_down" onclick="showd('{{ yearnum | shorten(-1)}}')">
-            <div class="eve-box clearfix" style="cursor: pointer;width: 140px;">
-            <i class="down down1 xiangxia" style="cursor: pointer;"></i><span class="year-num" style="font-size: 22px;color: #999;">{{ yearnum | shorten(-1)}}</span>
+            <div class="eve-box clearfix" style="cursor: pointer;width: 140px;" onmousemove="over(this);" onmouseout="out(this);">
+            <i class="down down1 xiangxia" style="cursor: pointer;"></i><span class="year-num redtitle"  style="font-size: 22px;">{{ yearnum | shorten(-1)}}</span>
             {% else %}
             {% if loop.index == loop.length %}
-            <span class="year-num" style="font-size: 22px;color: #999;"> -- {{ yearnum | shorten(-1)}}</span>
+            <span class="year-num redtitle" style="font-size: 22px;"> -- {{ yearnum | shorten(-1)}}</span>
             </div>
             </li>
             {% endif %}
@@ -99,14 +102,15 @@
   </div>
 </div>
 <script>
+
   function showd (year) {
     console.log(year+'showd')
     $("div[id$='_year']").css('display', 'none')
     $('#'+ year+ '_year').css('display', 'block')
     $("li[id$='_down']").find("div").find("i").removeClass('down1')
-    $("li[id$='_down']").find("span").css('color', '#999999')
+    $("li[id$='_down']").find("div").find("span").removeClass('redtitle')
     $('#' + year + '_down').find("div").find("i").addClass('down1')
-    $('#' + year + '_down').find("span").css('color', '#c13232')
+    $('#' + year + '_down').find("div").find("span").addClass('redtitle')
   }
   function showyear (year) {
     console.log('key',year)
