修改金吉列介绍

--- a/views/about/new_about.html
+++ b/views/about/new_about.html
@@ -57,6 +57,8 @@
 {% include "widget/new_footer/common_footer.html" %}
 {% import "widget/new_slide/new_slide.html" as  slide %}
 {{slide.leyu_slide("XC_PROFILE_SEAT10",helper) }}
+<!-- 秋展浮层 -->
+{% include "widget2/active_popup/active_popup.html" %}
 <script src="{{helper.cdnhost}}/assets/js/show_advert.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/nav_common.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/footer.js"></script>
