--- a/views/case_detail.html
+++ b/views/case_detail.html
@@ -68,7 +68,7 @@
           </div>
           <div class="connect-info">
             <img src="{{helper.cdnhost}}/assets/img/main_icon_phone.png" alt="">
-            <span><i class="zixun-info">留学咨询热线</i><i class="zixun-phone">：{{userinfo.tel}}</i></span>
+            <span><i class="zixun-info">留学咨询热线：</i><i class="zixun-phone">{{userinfo.tel}}</i></span>
             <span class="zixun-btn" onclick="openchat_new('{{ userinfo.new_job_number}}')">立即咨询</span>
           </div>
         </div>
