--- a/views/article_detail.html
+++ b/views/article_detail.html
@@ -77,6 +77,12 @@
               <span class="zixun-btn" onclick="openchat_new('{{ userinfo.new_job_number}}')">立即咨询</span>
             </div>
           </div>
+          <!-- 摘要 -->
+          <div class="summary-cont">
+            <div class="summary-text"></div>
+            <div class="zixun-text"></div>
+          </div>
+          <!-- 正文 -->
           <div class="adviser-case-detail-offer" data-img="{{article.article_info.img_info[0]}}" id="get-share-img">
             {{article.article_info.message | safe}}
           </div>
