--- a/views/widget2/community_advisor/community_advisor.css
+++ b/views/widget2/community_advisor/community_advisor.css
@@ -174,6 +174,7 @@
   background:url(../img/erweima@2x.png) no-repeat 0 0;
   background-size:70px 70px;
   z-index: 100;
+  cursor: pointer;
 }
 .advisor-code-open {
   position: absolute;
