--- a/views/about/new_about.html
+++ b/views/about/new_about.html
@@ -18,8 +18,10 @@
 {% import "widget/new_nav_first/common_nav.html" as common_nav %}
 {{ common_nav.common_nav(tdk,helper) }}
 
-<div class=" clearfix" style="margin: 0px auto;">
-    <div class=" about-guanggao"  style="width: 100%;height: 450px;background: #dedede;overflow: hidden" id="XC_PROFILE_SEAT1">
+<div class="clearfix">
+    <div class="branch-lunbo-slider" style="width:100%;height: 450px;" >
+        {% include "widget/xSlider/xSlider.html" %}
+    </div>
 </div>
 <div class="clearfix" style="position: relative;top: -50px;">
   {% include "widget/nav_tenth/new_tenth.html" %}
