修改金吉列简介

--- a/views/about/new_about.html
+++ b/views/about/new_about.html
@@ -4,11 +4,10 @@
 {% include "header_new.html" %}
 <link rel="stylesheet" type="text/css" href="{{helper.cdnhost}}/assets/css/about.css">
 <style>
-    .about-guanggao img{
-        width: 100%;
-        margin: 0 auto;
-        height: 450px;
-    }
+  .branch-lunbo-slider .slider-img-ul, .branch-lunbo-slider .slider-img-ul li{
+    width: 100%;
+    height: 450px;
+  }
 </style>
 </head>
 <body style="background: #ffffff;">
