--- a/views/case_detail.html
+++ b/views/case_detail.html
@@ -72,8 +72,28 @@
             <span class="zixun-btn" onclick="openchat_new('{{ userinfo.new_job_number}}')">立即咨询</span>
           </div>
         </div>
+        <!-- 摘要 -->
+        <div class="summary-cont">
+          <div class="summary-text">{{article.article_info.introduce}}</div>
+          <div class="zixun-text clearfix">
+              <img src="{{helper.cdnhost}}/assets/img/diye_icon_arrow_right.png" alt="">
+              <img src="{{helper.cdnhost}}/assets/img/diye_icon_arrow_right.png" alt="" style='margin-left: 4px;'>
+              <span onclick="openchat_new('{{ userinfo.new_job_number}}')">{{article.article_info.top_chain}}</span>
+              <img src="{{helper.cdnhost}}/assets/img/diye_icon_arrow_left.png" alt="">
+              <img src="{{helper.cdnhost}}/assets/img/diye_icon_arrow_left.png" alt="" style='margin-left: 4px;'>
+          </div>
+        </div>
+        <!-- 正文 -->
         <div class="adviser-case-detail-offer" data-img="{{article.article_info.img_info[0]}}" id="get-share-img">
           {{article.article_info.message | safe}}
+        </div>
+        <!-- 文字链 -->
+        <div class="zixun-text clearfix article-bot-zixuntext">
+          <img src="{{helper.cdnhost}}/assets/img/diye_icon_arrow_right.png" alt="">
+          <img src="{{helper.cdnhost}}/assets/img/diye_icon_arrow_right.png" alt="" style='margin-left: 4px;'>
+          <span onclick="openchat_new('{{ userinfo.new_job_number}}')">{{article.article_info.bottom_chain}}</span>
+          <img src="{{helper.cdnhost}}/assets/img/diye_icon_arrow_left.png" alt="">
+          <img src="{{helper.cdnhost}}/assets/img/diye_icon_arrow_left.png" alt="" style='margin-left: 4px;'>
         </div>
         <!-- 引导进入顾问主页 -->
         <div class="content-guide-box">
