--- a/views/widget/corporate_events/new_corporate_events.html
+++ b/views/widget/corporate_events/new_corporate_events.html
@@ -397,6 +397,13 @@
     }
     html += '</div>'
     $('#eve_slide').append($(html));
+    var year = a[0].substring(0,4);
+    $("div[id$='_year']").css('display', 'none')
+    $('#'+ year+ '_year').css('display', 'block')
+    $("li[id$='_down']").find("div").find("i").removeClass('down1')
+    $("li[id$='_down']").find("div").find("span").removeClass('redtitle')
+    $('#' + year + '_down').find("div").find("i").addClass('down1')
+    $('#' + year + '_down').find("div").find("span").addClass('redtitle')
   }
 
   function evemore (msg) {
