--- a/views/widget/new_slide/events_slide.html
+++ b/views/widget/new_slide/events_slide.html
@@ -111,6 +111,7 @@
     $("li[id$='_down']").find("div").find("span").removeClass('redtitle')
     $('#' + year + '_down').find("div").find("i").addClass('down1')
     $('#' + year + '_down').find("div").find("span").addClass('redtitle')
+    window.location.href = '/about/events.html#' + year
   }
   function showyear (year) {
     console.log('key',year)
