--- a/views/widget/corporate_events/new_corporate_events.html
+++ b/views/widget/corporate_events/new_corporate_events.html
@@ -210,7 +210,7 @@
       {% if item.thumb3 == '' or item.thumb3 == null %}
       {% if item.thumb == '' or item.thumb == null %}
       {# 无图 #}
-      <div class="dashiji-con" style="display: block;margin: 20px 35px 60px 36px;">
+      <div class="dashiji-con clearfix" style="display: block;margin: 20px 35px 60px 36px;">
         <i class="dian"></i>
         <i class="kuang_jiao"></i>
        {{ loop.index }}. {{ item.description }}
@@ -228,7 +228,7 @@
         {% endif %}
       {% else %}
       {% if loop.index==loop.length %}
-      <div class="dashiji-con" style="display: block;margin: 20px 35px 60px 36px;">
+      <div class="dashiji-con clearfix" style="display: block;margin: 20px 35px 60px 36px;">
         <i class="dian"></i>
         <i class="kuang_jiao"></i>
        {{ loop.index }}. {{ item.description }}
@@ -239,7 +239,7 @@
           </div>
       </div>
       {% else %}
-      <div class="dashiji-con" style="display: block;margin: 20px 35px 0px 36px;">
+      <div class="dashiji-con clearfix" style="display: block;margin: 20px 35px 0px 36px;">
         <i class="dian"></i>
         <i class="kuang_jiao"></i>
         {{ loop.index }}. {{ item.description }}
