修改大事记

--- a/views/widget/corporate_events/new_corporate_events.html
+++ b/views/widget/corporate_events/new_corporate_events.html
@@ -78,6 +78,7 @@
     position: relative;
     line-height: 25px;
     left: 30px;
+    float: none;
   }
   .dashiji-con .kuang_jiao{
     display: inline-block;
@@ -239,7 +240,7 @@
           </div>
       </div>
       {% else %}
-      <div class="dashiji-con clearfix" style="display: block;margin: 20px 35px 0px 36px;">
+      <div class="dashiji-con clearfix" style="display: block;margin: 20px 35px 60px 36px;">
         <i class="dian"></i>
         <i class="kuang_jiao"></i>
         {{ loop.index }}. {{ item.description }}
